--- a/.gitignore
+++ b/.gitignore
@@ -2,13 +2,13 @@
 #
 # Get latest from https://github.com/github/gitignore/blob/master/Unity.gitignore
 #
-New Unity Project/[Ll]ibrary/
-New Unity Project/[Tt]emp/
-New Unity Project/[Oo]bj/
-New Unity Project/[Bb]uild/
-New Unity Project/[Bb]uilds/
-New Unity Project/[Ll]ogs/
-New Unity Project/[Mm]emoryCaptures/
+/[Ll]ibrary/
+/[Tt]emp/
+/[Oo]bj/
+/[Bb]uild/
+/[Bb]uilds/
+/[Ll]ogs/
+/[Mm]emoryCaptures/
 
 # Never ignore Asset meta data
 !/[Aa]ssets/**/*.meta
